feat: Cleanup content

--- a/source/cv.html
+++ b/source/cv.html
@@ -19,16 +19,16 @@ title: Curriculum
                 <div class="media-body">
                     <p>
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        San Antonio TX
+                        Austin TX
                     </p>
                     <p>
-                        Soy <strong>desarrollador full-stack</strong> e
+                        Soy un <strong>ingeniero de software</strong> e
                         <strong>instructor de programación</strong>. Me gusta estar rodeado de
-                        gente que me motive a hacer el mejor trabajo de mi carrera así como de gente
+                        gente que me motive a dar mi mejor esfuerzo así como de gente
                         a la que pueda ayudar a crecer profesionalmente.
                     </p>
                     <p>
-                        Tengo más de <strong>13 años de experiencia</strong> en el área de
+                        Tengo más de <strong>15 años de experiencia</strong> en el área de
                         programación tanto en México como en Estados Unidos y estoy en busca de ser
                         parte de un equipo que valore el equilibrio trabajo-vida, TDD, pair
                         programming and revisiones de código.
@@ -50,91 +50,117 @@ title: Curriculum
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <em>Codeup [01/16 – actual]</em>.
-                        <strong>Instructor de Desarrollo Web</strong>.
-                        <p>
-                            Actualmente estoy trabajando en SA. TX. como instructor de tiempo
-                            completo, enseñando ya sea <strong>PHP (Laravel)</strong> o
-                            <strong>Java (Spring Boot)</strong> a desarrolladores full-stack que
-                            inician su carrera. Mis actividades como instructor incluyen <strong>
-                            pair programming</strong> y <strong>revisiones de código</strong> con
-                            los estudiantes.
-                        </p>
-                        <p>
-                            El año pasado colaboré un par de veces con 2 proyectos open source:
-                            <a href="https://drupalconsole.com" target="_blank" rel="noopener">
-                                Drupal Console
-                            </a>, proponiendo algunas guías para mejorar el procentaje de cobertura
-                            de las pruebas automáticas del proyecto (
-                            <a
-                                href="https://github.com/hechoendrupal/drupal-console/pull/2891"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #2891
-                            </a> es un buen ejemplo), y
-                            <a
-                                href="http://codeception.com" target="_blank"
-                                rel="noopener"
-                            >
-                                Codeception
-                            </a>, agregando soporte para PHPUnit 6 (
-                            <a
-                                href="https://github.com/Codeception/Codeception/pull/4142"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #4142
-                            </a>
-                            ). También tuve la oportunidad de asistir al taller de Clean Code de
-                            <strong>"Uncle" Bob</strong> el año pasado en Austin.
-                        </p>
+                        <em>Electronics Arts (EA) [05/18 – actual]</em>.
+                        <strong>Architecto de Software</strong>.
+                        <ul>
+                            <li>
+                                Java (Spring Boot, Spring Cloud), Angular, AWS, GitLab.
+                                PHP (Yii, Symfony, Zend Expressive, Slim)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
-                        <em>Inertia Interactive Media [05/15 – 12/15].</em>.
+                        <em>Codeup [01/16 – 05/18]</em>.
+                        <strong>Instructor full-stack de Desarrollo Web</strong>.
+                        <ul>
+                            <li>Java (Spring Boot), PHP (Laravel), Bootstrap, ES6</li>
+                            <li>
+                                En este periodo contribuí a varios proyectos Open Source.
+                                Agregué
+                                <a
+                                    href="https://github.com/Codeception/Codeception/pull/4142"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    soporte para PHPUnit 6
+                                </a>
+                                a
+                                <a
+                                    href="http://codeception.com" target="_blank"
+                                    rel="noopener"
+                                >
+                                    Codeception,
+                                </a>
+                                un framework de testing en PHP.
+                                Desarrollé
+                                <a
+                                    href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    un cliente en Java
+                                </a>
+                                para la API de YELP.
+                                Empecé a mantener una
+                                <a
+                                    href="https://github.com/MontealegreLuis/phuml"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    librería en PHP
+                                </a>
+                                para generar diagramas de clase UML.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="list-group-item">
+                        <em>Inertia Interactive Media [05/15 – 12/15]</em>.
                         <strong>Desarrollador Web</strong>.
-                        Estuve a cargo de una aplicación <strong>Symfony2</strong> con una integración
-                        con la <strong>API SOAP de Salesforfoce</strong> implementada a través de
-                        Web hooks y colas en <strong>RabbitMQ</strong>.
+                        <ul>
+                            <li>PHP (Symfony 2), RabbitMQ</li>
+                            <li>API SOAP de Salesforce</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Digizent International [04/13 – 12/13]</em>.
-                        <strong>Desarrollador PHP</strong> de una aplicación <strong>Symfony1</strong>
-                        para manejar campañas de correo electrónico para recaudación de fondos.
+                        <strong>Desarrollador PHP</strong>
+                        <ul>
+                            <li>PHP (Symfony 1)</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
                         <strong>Desarrollador .NET</strong> del equipo Advancement Solutions.
-                        Colaboré con el equipo con un producto desarrollado en <strong>C#</strong>
-                        y <strong>VB</strong>, el cual hacía uso de stored procedures en
-                        <strong>Oracle PL/SQL</strong>.
+                        <ul>
+                            <li>C# y VB (Web Forms)</li>
+                            <li>Oracle PL/SQL</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Consultor Java</strong>.
-                        Durante este periodo trabajé manteniendo la capa de acceso a datos de un
-                        Punto de Venta hecho en <strong>Hibernate</strong> y
-                        <strong>PostgreSQL</strong>. Hice también un poco de <strong>couching</strong>
-                        con algunos consultores Jr.
+                        <ul>
+                            <li>Java (Swing y Hibernate)</li>
+                            <li>PostgreSQL</li>
+                            <li>Mentoring de consultores Jr.</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
                         <strong>Desarrollador Java y PHP</strong> del departamento de Desarrollo e
-                        Innovación de Sistemas. Desarrollé una aplicación de monitoreo para algunos
-                        sistemas de atención al cliente escritos en <strong>Java</strong> con un
-                        aplicación Web de reportes escrita en <strong>PHP</strong>.
+                        Innovación de Sistemas.
+                        <ul>
+                            <li>Java</li>
+                            <li>PHP</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Consultor PHP independiente (medio tiempo) [08/07 – 01/14]</em>.
-                        Trabajé para varias empresas en Puebla. Desarrollé varias aplicaciones Web
-                        en <strong>ZF1</strong>, <strong>Slim</strong> y <strong>Silex</strong>
-                        principlamente.
+                        <ul>
+                            <li>
+                                PHP (ZF1, Slim, Silex)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Consultor PHP independiente (tiempo completo) [01/14 – 05/15]</em>.
-                        Trabajé para varias agencias en la Ciudad de México (Indava y Mupcow), y
-                        algunas otras en Puebla (Sistemas Integrales de Cómputo Montellano (SICOM) y
-                        Sii Ayuda) manteniendo aplicaciones en <strong>Symfony2</strong>
-                        principalmente.
+                        <ul>
+                            <li>PHP (Symfony 2)</li>
+                            <li>
+                                Colaboración con múltiples empresas: en la Ciudad de México (Indava y Mupcow), y
+                                algunas otras en Puebla (Sistemas Integrales de Cómputo Montellano (SICOM) y
+                                Sii Ayuda)
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -201,7 +227,7 @@ title: Curriculum
                 </div>
                 <div class="panel-body">
                     <p>
-                        Durante los últimos 11 años también trabajé como profesor de tiempo parcial
+                        Durante 11 años también trabajé como profesor de tiempo parcial
                         en 10 universidades en Puebla. He dado clases a más de 65 grupos, de
                         licenciatura y de maestría. He dirigido exitosamente 4 tesis. Y he pulicado
                         algunos articulos, siendo el más relevante un capítulo en el
