--- a/source/en/cv.html
+++ b/source/en/cv.html
@@ -19,17 +19,17 @@ title: Curriculum
                 <div class="media-body">
                     <p>
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        San Antonio TX
+                        Austin TX
                     </p>
                     <p>
-                        I'm a <strong>full-stack developer</strong> and
+                        I'm a <strong>software engineer</strong> and
                         a <strong>programming instructor</strong>. I like to be surrounded by
                         people who push me to do the best work of my career as well as people I can
                         nurture and support.
                     </p>
                     <p>
-                        I have over <strong>13 years of experience</strong> in tech both in Mexico
-                        and the United States and I’m looking forward to be part of a team that
+                        I have over <strong>15 years of experience</strong> in tech, both in Mexico
+                        and the United States, and I’m looking forward to be part of a team that
                         values work-life balance, TDD, pair programming and code reviews.
                     </p>
                 </div>
@@ -49,119 +49,117 @@ title: Curriculum
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <em>Codeup [01/16 – current]</em>.
-                        <strong>Web developer and Instructor</strong>.
-                        <p>
-                            I am currently working in SA. TX. as a web developer and instructor teaching
-                            <strong>Java (Spring Boot)</strong> to entry-level full-stack developers.
-                        </p>
-                        <p>
-                            As an instructor I introduce students to the practices and values to
-                            work effectively in teams, in order to present their first software product
-                            after 18 weeks of intensive training in Web development
-                        </p>
-                        <p>
-                            My main contributions so far include: 1) The introduction of pair programming to solve
-                            medium/large exercises. 2) A change in the way we teach Git and Github which is now
-                            something we deliver incrementally since day one. 3) Students now have the chance
-                            to learn how to use Github issues and Pull Requests during their first project in teams.
-                            4) I also introduced a shorter feedback loop process during their final projects, which
-                            is a 2 week period, by implementing daily demos.
-                            I also review their code during that period.
-                            These changes have improved the experience and the results achieved by our students.
-                        </p>
-                        <p>
-                            During the last year I contributed to the PHP testing framework
-                            <a
-                                href="http://codeception.com" target="_blank"
-                                rel="noopener"
-                            >
-                                Codeception
-                            </a> by adding support for PHPUnit 6 (
-                            <a
-                                href="https://github.com/Codeception/Codeception/pull/4142"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #4142
-                            </a>
-                            ).
-                            I released a
-                            <a
-                                href="https://github.com/MontealegreLuis/yelpv3-java-client"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                Java client
-                            </a>
-                            for the YELP API.
-                            I became the new maintainer of a
-                            <a
-                                href="https://github.com/MontealegreLuis/phuml"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                PHP package
-                            </a>
-                            to generate UML class diagrams.
-                            I also had the chance to attend the
-                            <a
-                                href="http://exploreddd.com/"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                Explore DDD
-                            </a>
-                            conference last year in Denver.
-                        </p>
+                        <em>Electronic Ars (EA) [05/18 – current]</em>.
+                        <strong>Software Architect</strong>.
+                        <ul>
+                            <li>
+                                Java (Spring Boot, Spring Cloud), Angular,
+                                AWS, GitLab. PHP (Yii, Symfony, Zend Expressive, Slim)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
-                        <em>Inertia Interactive Media [05/15 – 12/15].</em>.
+                        <em>Codeup [01/16 – 04/18]</em>.
+                        <strong>Full-stack developer and Instructor</strong>.
+                        <ul>
+                            <li>Java (Spring Boot), PHP (Laravel), Bootstrap, ES6</li>
+                            <li>
+                                During this period I contributed to multiple open source projects.
+                                I added
+                                <a
+                                    href="https://github.com/Codeception/Codeception/pull/4142"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    support for PHPUnit 6
+                                </a>
+                                to
+                                <a
+                                    href="http://codeception.com" target="_blank"
+                                    rel="noopener"
+                                >
+                                    Codeception,
+                                </a>
+                                a PHP testing framework.
+                                I released a
+                                <a
+                                    href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    Java client
+                                </a>
+                                for the YELP API.
+                                I became the new maintainer of a
+                                <a
+                                    href="https://github.com/MontealegreLuis/phuml"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    PHP package
+                                </a>
+                                to generate UML class diagrams.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="list-group-item">
+                        <em>Inertia Interactive Media [05/15 – 12/15]</em>.
                         <strong>Web Developer</strong>.
-                        Maintainer of a <strong>Symfony2</strong> application with
-                        an integration to the <strong>Salesforfoce SOAP API</strong>
-                        implemented via Web hooks and <strong>RabbitMQ</strong>
-                        queues.
+                        <ul>
+                            <li>PHP (Symfony 2), RabbitMQ</li>
+                            <li>API SOAP de Salesforce</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Digizent International [04/13 – 12/13]</em>.
-                        <strong>PHP developer</strong> of a <strong>Symfony1</strong>
-                        application to manage email campaigns for fundraising.
+                        <strong>PHP Developer</strong>
+                        <ul>
+                            <li>PHP (Symfony 1)</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
-                        <strong>.NET Developer</strong> of the Advancement Solutions
-                        team. I collaborated with the team with a product developed
-                        in <strong>C#</strong> and <strong>VB</strong>, which made
-                        heavy use of <strong>Oracle PL/SQL</strong> stored procedures.
+                        <strong>.NET Developer</strong> of the Advancement Solutions team.
+                        <ul>
+                            <li>C#, VB (Web Forms)</li>
+                            <li>Oracle PL/SQL</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
-                        <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java
-                        Consultant</strong>. During this period I worked maintaining
-                        the data access layer of a POS using <strong>Hibernate</strong>
-                        and <strong>PostgreSQL</strong> and <strong>coaching</strong>
-                        some Jr. consultants.
+                        <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Java Consultant</strong>.
+                        <ul>
+                            <li>Java (Swing and Hibernate)</li>
+                            <li>PostgreSQL</li>
+                            <li>Mentoring Jr. Consultants</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
                         <strong>Java and PHP developer</strong> of the department:
-                        Desarrollo e Innovación de Sistemas. I developed a
-                        monitoring application for some customer service systems
-                        written in <strong>Java</strong> with a reporting website
-                        written in <strong>PHP</strong>.
+                        Desarrollo e Innovación de Sistemas.
+                        <ul>
+                            <li>Java</li>
+                            <li>PHP</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Independent PHP consultant (part-time) [08/07 – 01/14]</em>.
-                        I worked for several companies in Puebla. I developed several
-                        applications with <strong>ZF1</strong>, <strong>Slim</strong>
-                        and <strong>Silex</strong> mainly.
+                        <ul>
+                            <li>
+                                PHP (ZF1, Slim, Silex)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Independent PHP consultant (full-time) [01/14 – 05/15]</em>.
-                        I worked for several agencies in Mexico City (Indava and
-                        Mupcow), and some others in Puebla (Sistemas Integrales de
-                        Cómputo Montellano (SICOM) and Sii Ayuda)  maintaining
-                        <strong>Symfony2</strong> applications mainly.
+                        <ul>
+                            <li>PHP (Symfony 2)</li>
+                            <li>
+                                I worked for several agencies in Mexico City (Indava and
+                                Mupcow), and some others in Puebla (Sistemas Integrales de
+                                Cómputo Montellano (SICOM) and Sii Ayuda)
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
