--- a/404/index.html
+++ b/404/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="es-mx">
-    <title>La página no existe &mdash; Your argument is invalid &mdash; Luis Montealegre</title>
+<head lang="es-mx"><title>La página no existe &mdash;Your argument is invalid &mdash;Luis Montealegre</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,8 +26,7 @@
 <link rel="alternate" type="application/atom+xml" href="/atom.xml" title="Your argument is invalid activity feed" />
 </head>
 <body>
-    <header class="navigation">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <header class="navigation"><div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -46,25 +44,22 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/cv/">Curriculum</a></li>
                     <li><a href="/portfolio/">Portafolio</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Favoritos <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/charlas/">Charlas</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/cv-latest.pdf" title="Descargar CV">
-                            <img height="25px" src="/images/download.png" alt="Descargar CV">
-                        </a>
-                    </li>
                     <li><a href="/">
                         <span class="language language-current">MX</span>
                     </a></li>
                     <li><a href="/en/">
                         <span class="language">US</span>
                     </a></li>
-                    <li>
-                        <a href="/atom.xml" class="link-icon">
-                            <img src="/images/rss.png" alt="RSS">
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -74,8 +69,7 @@
 
     <div class="content container">
         <div class="row">
-            <div class="col-sm-9">
-                <div class="page-header"><h1>La página no existe <small>:(</small></h1></div>
+            <div class="col-sm-9"><div class="page-header"><h1>La página no existe <small>:(</small></h1></div>
 <p class="lead">Que mal... La página que intentas ver no existe</p>
 <p>Lo más probable es que haya sido el resultado de:</p>
 <ul>
@@ -87,17 +81,11 @@
     var GOOG_FIXURL_LANG = (navigator.language || '').slice(0,2),GOOG_FIXURL_SITE = location.host;
 </script>
 <script src="//linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>            </div>
-            <div class="col-sm-3 sidebar">
-                <div class="panel panel-default">
+            <div class="col-sm-3 sidebar"><div class="panel panel-default">
     <div class="panel-heading"><h3 class="panel-title">Categorías</h3></div>
-    <div class="list-group">
-                    <a href="/blog/categorias/PHP/" class="list-group-item">
-                PHP
-            </a>
-                    <a href="/blog/categorias/JavaScript/" class="list-group-item">
-                JavaScript
-            </a>
-            </div>
+    <div class="list-group">            <a href="/blog/categorias/PHP/" class="list-group-item">PHP
+            </a>            <a href="/blog/categorias/JavaScript/" class="list-group-item">JavaScript
+            </a>    </div>
 </div>
 <div class="panel panel-default">
     <div class="panel-heading"><h4 class="panel-title">Sitios de interés</h4></div>
@@ -140,21 +128,18 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-    2014 - 2018 Luis Montealegre
+    <footer><div class="container">
+    2014 -2021 Luis Montealegre
     <p  class="pull-right">
         <a href="https://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
         </a>
     </p>
 </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    </footer><script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
-    <script>
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -162,6 +147,5 @@
 
     ga('create', 'UA-56875620-1', 'auto');
     ga('send', 'pageview');
-</script>
-</body>
+</script></body>
 </html>
