--- a/cv/index.html
+++ b/cv/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head lang="es-mx">
-    <title>Curriculum &mdash; Your argument is invalid &mdash; Luis Montealegre</title>
+<head lang="es-mx"><title>Curriculum &mdash;Your argument is invalid &mdash;Luis Montealegre</title>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -28,8 +27,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/master/devicon.min.css">
 </head>
 <body>
-    <header class="navigation">
-        <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <header class="navigation"><div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -47,25 +45,22 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/cv/">Curriculum</a></li>
                     <li><a href="/portfolio/">Portafolio</a></li>
-                    <li><a href="/blog/">Blog</a></li>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                            Favoritos <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/charlas/">Charlas</a></li>
+                        </ul>
+                    </li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li>
-                        <a href="/cv-latest.pdf" title="Descargar CV">
-                            <img height="25px" src="/images/download.png" alt="Descargar CV">
-                        </a>
-                    </li>
                     <li><a href="/">
                         <span class="language language-current">MX</span>
                     </a></li>
                     <li><a href="/en/">
                         <span class="language">US</span>
                     </a></li>
-                    <li>
-                        <a href="/atom.xml" class="link-icon">
-                            <img src="/images/rss.png" alt="RSS">
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -75,8 +70,7 @@
 
     <div class="content container">
         <div class="row">
-            <div class="col-sm-12">
-                <header class="row">
+            <div class="col-sm-12"><header class="row">
     <div class="media col-sm-12 avatar">
         <div class="panel panel-primary">
             <div class="panel-heading">
@@ -93,16 +87,16 @@
                 <div class="media-body">
                     <p>
                         <i class="fa fa-map-marker" aria-hidden="true"></i>
-                        San Antonio TX
+                        Austin TX
                     </p>
                     <p>
-                        Soy <strong>desarrollador full-stack</strong> e
+                        Soy un <strong>ingeniero de software</strong> e
                         <strong>instructor de programación</strong>. Me gusta estar rodeado de
-                        gente que me motive a hacer el mejor trabajo de mi carrera así como de gente
+                        gente que me motive a dar mi mejor esfuerzo así como de gente
                         a la que pueda ayudar a crecer profesionalmente.
                     </p>
                     <p>
-                        Tengo más de <strong>13 años de experiencia</strong> en el área de
+                        Tengo más de <strong>15 años de experiencia</strong> en el área de
                         programación tanto en México como en Estados Unidos y estoy en busca de ser
                         parte de un equipo que valore el equilibrio trabajo-vida, TDD, pair
                         programming and revisiones de código.
@@ -124,91 +118,117 @@
                 </div>
                 <ul class="list-group">
                     <li class="list-group-item">
-                        <em>Codeup [01/16 – actual]</em>.
-                        <strong>Instructor de Desarrollo Web</strong>.
-                        <p>
-                            Actualmente estoy trabajando en SA. TX. como instructor de tiempo
-                            completo, enseñando ya sea <strong>PHP (Laravel)</strong> o
-                            <strong>Java (Spring Boot)</strong> a desarrolladores full-stack que
-                            inician su carrera. Mis actividades como instructor incluyen <strong>
-                            pair programming</strong> y <strong>revisiones de código</strong> con
-                            los estudiantes.
-                        </p>
-                        <p>
-                            El año pasado colaboré un par de veces con 2 proyectos open source:
-                            <a href="https://drupalconsole.com" target="_blank" rel="noopener">
-                                Drupal Console
-                            </a>, proponiendo algunas guías para mejorar el procentaje de cobertura
-                            de las pruebas automáticas del proyecto (
-                            <a
-                                href="https://github.com/hechoendrupal/drupal-console/pull/2891"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #2891
-                            </a> es un buen ejemplo), y
-                            <a
-                                href="http://codeception.com" target="_blank"
-                                rel="noopener"
-                            >
-                                Codeception
-                            </a>, agregando soporte para PHPUnit 6 (
-                            <a
-                                href="https://github.com/Codeception/Codeception/pull/4142"
-                                target="_blank"
-                                rel="noopener"
-                            >
-                                #4142
-                            </a>
-                            ). También tuve la oportunidad de asistir al taller de Clean Code de
-                            <strong>"Uncle" Bob</strong> el año pasado en Austin.
-                        </p>
+                        <em>Electronics Arts (EA) [05/18 – actual]</em>.
+                        <strong>Architecto de Software</strong>.
+                        <ul>
+                            <li>
+                                Java (Spring Boot, Spring Cloud), Angular, AWS, GitLab.
+                                PHP (Yii, Symfony, Zend Expressive, Slim)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
-                        <em>Inertia Interactive Media [05/15 – 12/15].</em>.
+                        <em>Codeup [01/16 – 05/18]</em>.
+                        <strong>Instructor full-stack de Desarrollo Web</strong>.
+                        <ul>
+                            <li>Java (Spring Boot), PHP (Laravel), Bootstrap, ES6</li>
+                            <li>
+                                En este periodo contribuí a varios proyectos Open Source.
+                                Agregué
+                                <a
+                                    href="https://github.com/Codeception/Codeception/pull/4142"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    soporte para PHPUnit 6
+                                </a>
+                                a
+                                <a
+                                    href="http://codeception.com" target="_blank"
+                                    rel="noopener"
+                                >
+                                    Codeception,
+                                </a>
+                                un framework de testing en PHP.
+                                Desarrollé
+                                <a
+                                    href="https://github.com/MontealegreLuis/yelpv3-java-client"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    un cliente en Java
+                                </a>
+                                para la API de YELP.
+                                Empecé a mantener una
+                                <a
+                                    href="https://github.com/MontealegreLuis/phuml"
+                                    target="_blank"
+                                    rel="noopener"
+                                >
+                                    librería en PHP
+                                </a>
+                                para generar diagramas de clase UML.
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="list-group-item">
+                        <em>Inertia Interactive Media [05/15 – 12/15]</em>.
                         <strong>Desarrollador Web</strong>.
-                        Estuve a cargo de una aplicación <strong>Symfony2</strong> con una integración
-                        con la <strong>API SOAP de Salesforfoce</strong> implementada a través de
-                        Web hooks y colas en <strong>RabbitMQ</strong>.
+                        <ul>
+                            <li>PHP (Symfony 2), RabbitMQ</li>
+                            <li>API SOAP de Salesforce</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Digizent International [04/13 – 12/13]</em>.
-                        <strong>Desarrollador PHP</strong> de una aplicación <strong>Symfony1</strong>
-                        para manejar campañas de correo electrónico para recaudación de fondos.
+                        <strong>Desarrollador PHP</strong>
+                        <ul>
+                            <li>PHP (Symfony 1)</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Ellucian (Sungard Higher Education) [01/09 – 04/13]</em>.
                         <strong>Desarrollador .NET</strong> del equipo Advancement Solutions.
-                        Colaboré con el equipo con un producto desarrollado en <strong>C#</strong>
-                        y <strong>VB</strong>, el cual hacía uso de stored procedures en
-                        <strong>Oracle PL/SQL</strong>.
+                        <ul>
+                            <li>C# y VB (Web Forms)</li>
+                            <li>Oracle PL/SQL</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>BIC Consulting [12/10 – 06/11]</em>. <strong>Consultor Java</strong>.
-                        Durante este periodo trabajé manteniendo la capa de acceso a datos de un
-                        Punto de Venta hecho en <strong>Hibernate</strong> y
-                        <strong>PostgreSQL</strong>. Hice también un poco de <strong>couching</strong>
-                        con algunos consultores Jr.
+                        <ul>
+                            <li>Java (Swing y Hibernate)</li>
+                            <li>PostgreSQL</li>
+                            <li>Mentoring de consultores Jr.</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Comisión Federal de Electricidad [08/05-01/2006]</em>.
                         <strong>Desarrollador Java y PHP</strong> del departamento de Desarrollo e
-                        Innovación de Sistemas. Desarrollé una aplicación de monitoreo para algunos
-                        sistemas de atención al cliente escritos en <strong>Java</strong> con un
-                        aplicación Web de reportes escrita en <strong>PHP</strong>.
+                        Innovación de Sistemas.
+                        <ul>
+                            <li>Java</li>
+                            <li>PHP</li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Consultor PHP independiente (medio tiempo) [08/07 – 01/14]</em>.
-                        Trabajé para varias empresas en Puebla. Desarrollé varias aplicaciones Web
-                        en <strong>ZF1</strong>, <strong>Slim</strong> y <strong>Silex</strong>
-                        principlamente.
+                        <ul>
+                            <li>
+                                PHP (ZF1, Slim, Silex)
+                            </li>
+                        </ul>
                     </li>
                     <li class="list-group-item">
                         <em>Consultor PHP independiente (tiempo completo) [01/14 – 05/15]</em>.
-                        Trabajé para varias agencias en la Ciudad de México (Indava y Mupcow), y
-                        algunas otras en Puebla (Sistemas Integrales de Cómputo Montellano (SICOM) y
-                        Sii Ayuda) manteniendo aplicaciones en <strong>Symfony2</strong>
-                        principalmente.
+                        <ul>
+                            <li>PHP (Symfony 2)</li>
+                            <li>
+                                Colaboración con múltiples empresas: en la Ciudad de México (Indava y Mupcow), y
+                                algunas otras en Puebla (Sistemas Integrales de Cómputo Montellano (SICOM) y
+                                Sii Ayuda)
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
@@ -275,7 +295,7 @@
                 </div>
                 <div class="panel-body">
                     <p>
-                        Durante los últimos 11 años también trabajé como profesor de tiempo parcial
+                        Durante 11 años también trabajé como profesor de tiempo parcial
                         en 10 universidades en Puebla. He dado clases a más de 65 grupos, de
                         licenciatura y de maestría. He dirigido exitosamente 4 tesis. Y he pulicado
                         algunos articulos, siendo el más relevante un capítulo en el
@@ -290,21 +310,18 @@
         </div>
     </div>
 
-    <footer>
-        <div class="container">
-    2014 - 2018 Luis Montealegre
+    <footer><div class="container">
+    2014 -2021 Luis Montealegre
     <p  class="pull-right">
         <a href="https://creativecommons.org/licenses/by-nc/2.5/">
             <img src="/images/cc.primary.srr.gif" alt="Algunos derechos reservados">
         </a>
     </p>
 </div>
-    </footer>
-
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+    </footer><script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 <script src="https://netdna.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js">
 </script>
-    <script>
+<script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
             m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
@@ -312,6 +329,5 @@
 
     ga('create', 'UA-56875620-1', 'auto');
     ga('send', 'pageview');
-</script>
-    </body>
+</script>    </body>
 </html>
